PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>To identify if a meeting is with an LP or Consultant</description>
    <formula>If( ISPICKVAL(Account.Investor_Type__c, &quot;Consultant&quot;) ,&quot;Consultant&quot;, &quot;LP&quot;)</formula>
    <inlineHelpText>To identify if a meeting is with an LP or Consultant</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>