PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Active_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Active_Opportunity__c</fullName>
    <description>Check to see if the Opportunity is active.  If the Investment vehicle is In marketing and the Probability is &gt;=30% and is not Won.</description>
    <formula>IF( Investment_Vehicle_In_Marketing__c = True &amp;&amp;  IsWon = False &amp;&amp; NOT(ISPICKVAL(StageName, &quot;Firm Decline&quot;)), TRUE, FALSE)</formula>
    <inlineHelpText>Check to see if the Opportunity is active.  If the Investment vehicle is In marketing and the Probability is &gt;=30% and is not Won.</inlineHelpText>
    <label>Active Opportunity</label>
    <type>Checkbox</type>
</CustomField>