PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>BAM Finance</description>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formal Pitch</fullName>
            </value>
            <value>
                <fullName>RFP Process</fullName>
            </value>
            <value>
                <fullName>Informal Pitch</fullName>
            </value>
            <value>
                <fullName>High Level Discussion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>