PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume__c</fullName>
    <label>Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>