PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Anticipated_Close_Date_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Close_Date_Tracker__c</fullName>
    <inlineHelpText>Standardize the dates to either be end of the month or end of the quarter.  Once the date is known, ensure this field is updated so we know when the closes are going to happen.  Eventually this should match the Estimated Close Date.</inlineHelpText>
    <label>Anticipated Close Date (Tracker)</label>
    <type>Date</type>
</CustomField>