PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Anticipated_Close_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Close_Tracker__c</fullName>
    <label>Anticipated Close (Tracker)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Subsequent</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Post-Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>