PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/BFIN_Estimated_Fee__c.field-meta.xml
<CustomField>
    <fullName>BFIN_Estimated_Fee__c</fullName>
    <inlineHelpText>Excluding HST 
Enter full amount (value is not displayed in millions)</inlineHelpText>
    <label>BFIN Estimated Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>