PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/BFIN_FeeTypes__c.field-meta.xml
<CustomField>
    <fullName>BFIN_FeeTypes__c</fullName>
    <label>Fee Type(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bonus Fee</fullName>
            </value>
            <value>
                <fullName>Development Fee</fullName>
            </value>
            <value>
                <fullName>Financial Advisory Fee</fullName>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Participation Fee</fullName>
            </value>
            <value>
                <fullName>Portal 23 Fee</fullName>
            </value>
            <value>
                <fullName>Success Fee</fullName>
            </value>
            <value>
                <fullName>Work Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>