PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/BIM_Secondary_Mktg_Rep__c.field-meta.xml
<CustomField>
    <fullName>BIM_Secondary_Mktg_Rep__c</fullName>
    <formula>Account.BIM_Secondary_Mktg_Rep__r.FirstName &amp; &quot; &quot; &amp;  Account.BIM_Secondary_Mktg_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSG Secondary Mktg Rep</label>
    <type>Text</type>
</CustomField>