PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Brookfield_Notes__c.field-meta.xml
<CustomField>
    <fullName>Brookfield_Notes__c</fullName>
    <description>BAM Finance</description>
    <inlineHelpText>Internal notes only</inlineHelpText>
    <label>Brookfield Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>