PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>The type of investment first, re-up series, re-up platform, crossover, direct, co-invest, top up</description>
    <inlineHelpText>The type of investment first, re-up series, re-up platform, crossover, direct, co-invest, top up</inlineHelpText>
    <label>Opportunity Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>Re-Up Series</fullName>
                <label>Re-Up</label>
            </value>
            <value>
                <fullName>Crossover</fullName>
            </value>
            <value>
                <fullName>Co-Invest</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Separate Accounts</fullName>
            </value>
            <value>
                <fullName>Sale of Asset</fullName>
            </value>
            <value>
                <fullName>General Overview</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
                <isActive>false</isActive>
                <label>Direct</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Re-Up</fullName>
                <isActive>false</isActive>
                <label>Re-Up</label>
            </value>
            <value>
                <fullName>Re-Up Platform</fullName>
                <isActive>false</isActive>
                <label>Re-Up Platform</label>
            </value>
            <value>
                <fullName>Top up</fullName>
                <isActive>false</isActive>
                <label>Top up</label>
            </value>
            <value>
                <fullName>Top-up</fullName>
                <isActive>false</isActive>
                <label>Top-up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>