PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Close_Details__c.field-meta.xml
<CustomField>
    <fullName>Close_Details__c</fullName>
    <inlineHelpText>Indicate close round if needed.</inlineHelpText>
    <label>Close Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>