PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Close_Details_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Close_Details_Tracker__c</fullName>
    <label>Close Details (Tracker)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>