PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Close_Year_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Close_Year_Opportunity__c</fullName>
    <formula>IF(ISBLANK( CloseDate ), &quot;&quot;, TEXT(YEAR(CloseDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Year (Opportunity)</label>
    <type>Text</type>
</CustomField>