PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Closed_by_Consultant_CRM__c.field-meta.xml
<CustomField>
    <fullName>Closed_by_Consultant_CRM__c</fullName>
    <label>Closed by Consultant CRM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>