PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Components__c.field-meta.xml
<CustomField>
    <fullName>Components__c</fullName>
    <label>Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>RECs</fullName>
            </value>
            <value>
                <fullName>Ancillaries</fullName>
            </value>
            <value>
                <fullName>Transmission</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>