PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Concept_Memo__c.field-meta.xml
<CustomField>
    <fullName>Concept_Memo__c</fullName>
    <label>Concept Memo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>