PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Consultant_Office__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Consultant__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Advised Opportunities</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>