PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Counterparty_Contact__c.field-meta.xml
<CustomField>
    <fullName>Counterparty_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BRP Used Field</description>
    <label>Counterparty Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Counterparty Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>