PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Country_Text__c.field-meta.xml
<CustomField>
    <fullName>Country_Text__c</fullName>
    <label>Country Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>