PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Current_Funded__c.field-meta.xml
<CustomField>
    <fullName>Current_Funded__c</fullName>
    <label>Current Funded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>