PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Current_Investor__c.field-meta.xml
<CustomField>
    <fullName>Current_Investor__c</fullName>
    <formula>IF (Account.PFG_Number_of_Current_Commitments__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Investor</label>
    <type>Checkbox</type>
</CustomField>