PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Current_Rating_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Rating_Status__c</fullName>
    <label>Current Rating Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Standing</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>