PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Date_of_Last_Due_Diligence_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Due_Diligence_Meeting__c</fullName>
    <label>Date of Last Due Diligence Meeting</label>
    <type>Date</type>
</CustomField>