PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Date_of_Meeting_Product_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting_Product_Specialist__c</fullName>
    <inlineHelpText>Date of Last Meeting Product Specialist</inlineHelpText>
    <label>Date of Meeting Product Specialist</label>
    <type>Date</type>
</CustomField>