PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Deal_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Deal_Commitment__c</fullName>
    <description>This Field is Used for BAM Finance Deal&#39;s commitment % for opportunity</description>
    <label>Deal Commitment %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>