PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Deal_number__c.field-meta.xml
<CustomField>
    <fullName>Deal_number__c</fullName>
    <description>Deal number currently shows on the Campaign record.  This should actually be on the Opportunity record, and just copied to the Campaign record (this can be a formula or look up).  The deal number should be auto-created pulling information from the Opportunity with the syntax: Office Country_Deal Type_Year_Unique# (Ex. Canada_Brokerage_2014_001).</description>
    <formula>TEXT(Office_Country__c )&amp;&quot;: &quot;&amp;TEXT(Deal_Type__c)&amp;&quot;_&quot;&amp;Text(YEAR( Mandate_Signed__c  ))&amp;&quot;_&quot;&amp;Deal_number_Auto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal number</label>
    <type>Text</type>
</CustomField>