PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Deal_Sheet_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sheet_Comments__c</fullName>
    <label>Deal Sheet Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>