PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Deal_TeamStrategic__c.field-meta.xml
<CustomField>
    <fullName>Deal_TeamStrategic__c</fullName>
    <label>Owner(s)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>