PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Deferred_Members__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Members__c</fullName>
    <label>Deferred Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>