PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Discretionary_Client__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to denote whether the Opportunity Account is a discretionary client</description>
    <inlineHelpText>Check box to denote whether the Opportunity Account is a discretionary client</inlineHelpText>
    <label>Discretionary Client</label>
    <type>Checkbox</type>
</CustomField>