PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Domestic_Capital__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Capital__c</fullName>
    <inlineHelpText>Yes = Capital that will be a Domestic investment . 
No = capital that will be a Foreign investment. 
To be Determined can be selected if answer is unknown. This will also be the default selection.</inlineHelpText>
    <label>Domestic Capital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>To be Determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>