PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Due_Diligence_End_Date_Comments__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_End_Date_Comments__c</fullName>
    <label>Due Diligence End Date Comments</label>
    <type>TextArea</type>
</CustomField>