PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Engaged_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Mgmt__c</fullName>
    <label>Engaged Mgmt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>