PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Equity_Check__c.field-meta.xml
<CustomField>
    <fullName>Equity_Check__c</fullName>
    <inlineHelpText>In Millions $$</inlineHelpText>
    <label>Equity Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>