PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Estimated_Annualized_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annualized_Fee__c</fullName>
    <formula>Investment_Vehicle__r.Management_Fee_Annualized_BIM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annualized Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>