PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Estimated_Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Quarter__c</fullName>
    <formula>IF(ISBLANK(  Anticipated_Close_Date_Tracker__c  ), &quot;&quot;, TEXT(YEAR(  Anticipated_Close_Date_Tracker__c  )) + &quot; Q&quot; + TEXT(CEILING( MONTH (  Anticipated_Close_Date_Tracker__c  ) / 3 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Close Quarter</label>
    <type>Text</type>
</CustomField>