PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Expense_Recoverable__c.field-meta.xml
<CustomField>
    <fullName>Expense_Recoverable__c</fullName>
    <label>Expense Recoverable</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>