PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Fee_Terms_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fee_Terms_Comments__c</fullName>
    <description>Placeholder for comments as it relates to investor side letter information and other special circumstances.</description>
    <inlineHelpText>Placeholder for comments as it relates to investor side letter information and other special circumstances.</inlineHelpText>
    <label>Fee Terms Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>