PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Field_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Field_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Consultant__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Field Consultant)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>