PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/FIR_Investment_Period_Uninvested__c.field-meta.xml
<CustomField>
    <fullName>FIR_Investment_Period_Uninvested__c</fullName>
    <description>FIR- Investment Period - Uninvested - Offered</description>
    <inlineHelpText>FIR- Investment Period - Uninvested - Offered</inlineHelpText>
    <label>FIR- Investment Period - Uninvested</label>
    <precision>18</precision>
    <scale>11</scale>
    <type>Percent</type>
</CustomField>