PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Fund_Close_Dates__c.field-meta.xml
<CustomField>
    <fullName>Fund_Close_Dates__c</fullName>
    <inlineHelpText>List of Active fund close dates</inlineHelpText>
    <label>Active Fund Close Dates &amp; Types</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>