PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Good_Cheap__c.field-meta.xml
<CustomField>
    <fullName>Good_Cheap__c</fullName>
    <label>Good/Cheap</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>G/C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>