PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Greater_Than_Data_Room_Access_Provided__c.field-meta.xml
<CustomField>
    <fullName>Greater_Than_Data_Room_Access_Provided__c</fullName>
    <formula>Data_Room_Access_Provided__c   &gt;=  Investment_Vehicle__r.Final_Closing_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Greater Than Data Room Access Provided</label>
    <type>Checkbox</type>
</CustomField>