PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Greater_Than_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Greater_Than_Date_Received__c</fullName>
    <formula>RFI_Request__c   &gt;=  Investment_Vehicle__r.Final_Closing_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Greater Than Date Received</label>
    <type>Checkbox</type>
</CustomField>