PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Greater_Than_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Greater_Than_Last_Activity__c</fullName>
    <formula>Last_Activity_Date__c   &gt;=  Investment_Vehicle__r.Final_Closing_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Greater Than Last Activity</label>
    <type>Checkbox</type>
</CustomField>