PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Has_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Has_Consultant__c</fullName>
    <label>Has Consultant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Research Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>