PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/IC_Meeting__c.field-meta.xml
<CustomField>
    <fullName>IC_Meeting__c</fullName>
    <description>Investment Committee Date</description>
    <inlineHelpText>Investment Committee Date</inlineHelpText>
    <label>IC Meeting</label>
    <type>Date</type>
</CustomField>